# weather

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: api.py  cli.py  config.py  logger.py
src/app/: api.py  cli.py  config.py  logging.py  models.py  renderer.py
tests/: test_api.py  test_cli.py  test_config.py  test_renderer_utils.py
