[project]
name = "weather-cli"
version = "0.2.0"
description = "Async weather CLI using httpx, rich, loguru, pydantic-settings"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "loguru>=0.7.2",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

# -----------------------------
# Ruff 配置
# -----------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------
# Pyright 配置
# -----------------------------
[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = ["tests"]
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["if __name__ == '__main__'"]

[project.scripts]
weather = "app.cli:run"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
